--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/normalize.css">
-  <link rel="stylesheet" href="assets/css/all.min.css">
-  <link rel="stylesheet" href="assets/css/fontawesome.min.css">
 
   <title>Frontend Mentor | Advice generator app</title>
 
@@ -49,7 +47,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Seif Aldin</a>.
   </div>
   <script src="assets/js/logic.js"></script>
 </body>
